<resources>
    <string name="app_name">Laundry</string>
    <string name="home">Selamat Datang di Aplikasi Laundry</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_age">Age</string>
    <string name="hint_password">Password</string>
    <string name="hint_nohp">Nomor Telepon</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_username">Username</string>
    <string name="hint_harga">Harga</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_username">Enter Username</string>
    <string name="error_message_alamat">Enter Alamat</string>
    <string name="error_message_nohp">Enter No. Hp</string>
    <string name="error_message_harga">Enter Harga</string>
    <string name="success_message">Sign Up Successful</string>
</resources>
